QNetworkAccessManager - ensure abort reaches QFtp

Previously, we just disconnected signals from QFtp and allowed it
to continue downloading in the background.

Task-number: QTBUG-25494
Change-Id: I891c2fff88ef1ee554d1ccf821a3f7998eeb8406
Reviewed-by: Martin Petersson <Martin.Petersson@nokia.com>

cregit: c6864e0a580793f29c7d2cf180fc0f2ac2fc2b2c https://github.com/qt/qtbase/commit/c6864e0a580793f29c7d2cf180fc0f2ac2fc2b2c